@@ -1,0 +1,1 @@
+co.elastic.apm.agent.redis.redisson.RedisConnectionInstrumentation
