@@ -187,6 +187,11 @@ Other Servlet 3+ compliant servers will most likely work as well.
 |The agent creates spans for interactions with the Lettuce client.
 |1.13.0
 
+|Redis Redisson
+|2.1.5+
+|The agent creates spans for interactions with the Redisson client.
+|1.15.0
+
 |MongoDB driver
 |3.x
 |The agent creates spans for interactions with the MongoDB driver.
@@ -455,4 +460,3 @@ If you are seeing gaps in the span timeline and want to include certain methods,
 * The agent does currently not support running on JVMs with an enabled `SecurityManager`.
   You may see exceptions like this: `java.security.AccessControlException: access denied ("java.lang.RuntimePermission" "getProtectionDomain")`.
   Try to grant `java.security.AllPermission` to the agent.
-
